Working on mobile screen size issue

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -157,7 +157,7 @@ header {
 .banner {
 	overflow: hidden;
 	margin: 0 auto !important;
-	background: #CACACA;
+	background: #262B37;
 }
 
 .bannerText {
